--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -1118,7 +1118,8 @@ requirepass 123456
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 # maxmemory <bytes>
-maxmemory 500mb
+maxmemory 500000000
+# maxmemory 500mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
