--- a/docker/php80/Dockerfile
+++ b/docker/php80/Dockerfile
@@ -30,12 +30,14 @@ RUN install-php-extensions intl
 RUN apk add --update nodejs npm
 RUN apk add --update npm
 
-USER root
+# USER root
 
-RUN adduser -D jason -u 1000
+# RUN adduser -D jason -u 1000
 
-RUN chown -R jason:jason /var/www/html
+# RUN chown -R jason:jason /var/www/html
 
-USER jason
+# USER jason
+
+RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
 
 COPY php.ini /usr/local/etc/php/conf.d/
