--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,7 +112,7 @@ services:
       PMA_HOSTS: mysql,35.229.140.195
       PMA_PORTS: 3306,3306
       PMA_ARBITRARY: 1
-      UPLOAD_LIMIT: 300M
+      UPLOAD_LIMIT: 600M
     restart: always
     ports:
       - 8085:80
@@ -145,21 +145,21 @@ services:
     networks:
       - lnmp
 
-  # golang:
-  #   container_name: golang
-  #   build: 
-  #     context: ./docker/golang
-  #     args:
-  #       GOLANG_VERSION: $GOLANG_VERSION
-  #       GOLANG_USER: $GOLANG_USER 
-  #       GOLANG_UID: $GOLANG_UID 
+  golang:
+    container_name: golang
+    build: 
+      context: ./docker/golang
+      args:
+        GOLANG_VERSION: $GOLANG_VERSION
+        GOLANG_USER: $GOLANG_USER 
+        GOLANG_UID: $GOLANG_UID 
     
-  #   ports:
-  #     - "8888:80"
-  #   volumes:
-  #     - ./golang:/go
-  #   networks:
-  #     - lnmp
+    ports:
+      - "8888:80"
+    volumes:
+      - ./golang:/go
+    networks:
+      - lnmp
 
 
   # mongo:
