Feat : 增加 supervisord

--- a/docker/php74/Dockerfile
+++ b/docker/php74/Dockerfile
@@ -38,3 +38,7 @@ RUN apk add --update npm
 RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
 
 COPY php.ini /usr/local/etc/php/conf.d/
+
+COPY supervisord.conf /etc/supervisor/supervisord.conf
+
+CMD ["/usr/bin/supervisord", "-n", "-c",  "/etc/supervisor/supervisord.conf"]
