--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       - "3000:3000"
     volumes:
       - ./www:/var/www/html
+      - ./docker/supervisor:/etc/supervisor/conf.d
+      - ./log:/var/log
     working_dir: /var/www/html
     depends_on:
       - mysql
@@ -75,6 +77,7 @@ services:
       # - "3000:3000"
     volumes:
       - ./www:/var/www/html
+      - ./docker/supervisor:/etc/supervisor/conf.d
     working_dir: /var/www/html
     depends_on:
       - mysql
@@ -141,12 +144,12 @@ services:
       - php80
       - php74
       - all
-  sqlite:
-    image: dockerpinata/sqlite:latest
-    container_name: sqlite
-    tty: true           # <-- This option
-    networks:
-      - lnmp
+  # sqlite:
+  #   image: dockerpinata/sqlite:latest
+  #   container_name: sqlite
+  #   tty: true           # <-- This option
+  #   networks:
+  #     - lnmp
 
   # golang:
   #   container_name: golang
@@ -165,55 +168,83 @@ services:
   #     - lnmp
 
 
-  # mongo:
-  #   image: mongo
-  #   # restart: always
-  #   ports:
-  #     - 27017:27017
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: jason
-  #     MONGO_INITDB_ROOT_PASSWORD: jason
-  #   volumes:
-  #     - ./docker/mongo:/data/db
-  #   networks:
-  #     - lnmp
-  #   profiles:
-  #     - mongo
-  #     - all
-
-  # mongo-express:
-  #   image: mongo-express
-  #   # restart: always
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: jason
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: jason
-  #     ME_CONFIG_MONGODB_URL: mongodb://jason:jason@mongo:27017/
-  #   depends_on:
-  #     - mongo
-  #   networks:
-  #     - lnmp
-  #   profiles:
-  #     - mongo
-  #     - all
-  
-  nodejs18:
-    container_name: nodejs18
-    image: node:18.12.0-alpine3.16
-    volumes:
-      - ./nodejs:/src
-    working_dir: /src
-    tty: true           # <-- This option
+  mongo:
+    image: mongo
+    # restart: always
     ports:
-      - 19999:19999
-      - 5173:5173
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: jason
+      MONGO_INITDB_ROOT_PASSWORD: jason
+    volumes:
+      - ./docker/mongo:/data/db
     networks:
       - lnmp
     profiles:
+      - mongo
       - all
-      - php80
-      - php74
+
+  mongo-express:
+    image: mongo-express
+    # restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: jason
+      ME_CONFIG_MONGODB_ADMINPASSWORD: jason
+      ME_CONFIG_MONGODB_URL: mongodb://jason:jason@mongo:27017/
+    depends_on:
+      - mongo
+    networks:
+      - lnmp
+    profiles:
+      - mongo
+      - all
+  
+  # nodejs18:
+  #   container_name: nodejs18
+  #   image: node:18.12.0-alpine3.16
+  #   volumes:
+  #     - ./nodejs:/src
+  #   working_dir: /src
+  #   tty: true           # <-- This option
+  #   ports:
+  #     - 19999:19999
+  #     - 5173:5173
+  #   networks:
+  #     - lnmp
+  #   profiles:
+  #     - all
+  #     - php80
+  #     - php74
+  #     - node
+
+  # nodejs16:
+  #   container_name: nodejs16
+  #   image: node:16-alpine
+  #   volumes:
+  #     - ./nodejs:/src
+  #   working_dir: /src
+  #   tty: true           # <-- This option
+  #   ports:
+  #     - 19998:19998
+  #   networks:
+  #     - lnmp
+  #   profiles:
+  #     - node
+  # nodejs14:
+  #   container_name: nodejs14
+  #   image: node:14-alpine
+  #   volumes:
+  #     - ./nodejs:/src
+  #   working_dir: /src
+  #   tty: true           # <-- This option
+  #   ports:
+  #     - 19997:19997
+  #   networks:
+  #     - lnmp
+  #   profiles:
+  #     - node
 
 networks:
     lnmp:
