--- a/docker/php80/php.ini
+++ b/docker/php80/php.ini
@@ -3,11 +3,14 @@ memory_limit=256M
 max_execution_time=300
 max_input_time=300
 max_input_vars=5000
-upload_max_filesize=100M
-post_max_size=100M
+upload_max_filesize=1000M
+post_max_size=1000M
 [opcache]
 opcache.enable=1
 opcache.revalidate_freq=0
 opcache.validate_timestamps=1
 opcache.jit_buffer_size=100M
 opcache.jit=tracing
+
+[xdebug]
+ xdebug.mode=develop,coverage,debug
